# edupt

./: .gitignore  CMakeLists.txt  README.md  constant.h  intersection.h  main.cpp  material.h  ppm.h  radiance.h  random.h  ray.h  render.h  scene.h  sphere.h  vec.h
